--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "framer-motion": "^10.16.4",
+    "motion": "^10.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
