--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "flask": "^0.2.10",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.4",
     "jwt-decode": "^3.1.2",
     "motion": "^10.16.2",
